--- a/style.css
+++ b/style.css
@@ -1,40 +1,65 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 body {
-    margin: 0;
-    padding: 0;
-    background: black;
-    margin: auto;
+  margin: 0;
+  padding: 0;
+  background: black;
+  margin: auto;
+  color: white;
+  font-family: 'Open Sans', Roboto, Arial;
 }
 
 .container {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    min-height: 100vh;
-    padding-bottom: 4em;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+  padding-bottom: 4em;
 }
 
 .white {
-    background: white;
-    padding-top: 4em;
+  background: white;
+  padding-top: 4em;
 }
 
 iframe {
-    width: 100vw;
-    height: 90vh;
-    border: none;
-    overflow: hidden;
+  width: 100vw;
+  height: 90vh;
+  border: none;
+  overflow: hidden;
 }
 
 p {
-    color: white;
-    font-family: "Open Sans", Roboto, Arial;
-    max-width: 60vw;
-    text-align: center;
-    font-size: 1.5em;
+  max-width: 60vw;
+  text-align: center;
+  font-size: 1.5em;
 }
+
 .white p {
-    color: black;
+  color: black;
+}
+
+.facts {
+  display: flex;
+  flex-direction: row;
+  color: white;
+}
+
+.facts-image,
+.facts-content {
+  width: 50%;
+}
+
+.facts-content {
+  padding: 20px;
+}
+
+.facts-content li {
+  margin-bottom: 10px;
+  font-size: 1.5em;
+}
+
+.facts-image img {
+  max-width: 100%;
 }
